--- a/properties.html
+++ b/properties.html
@@ -9,7 +9,7 @@
 <body>
          <p>
             the software is optimised for the hospitality industry and operates as a central database for 
-            all hotel information. All necessary data is accessible to management and employees in one secure location.
+            all hotel information. All necessary idididididididididi data is accessible to management and employees in one secure location.
             These days, HMS’ are cloud-based for easy online access.
         </p>
 </body>
